--- a/mod5-solution/index.html
+++ b/mod5-solution/index.html
@@ -46,6 +46,7 @@
                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
             </li>
             <li>
+              <a href="about()">about</a>
               <a href="#" onclick=about();>
                 <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
             </li>
