--- a/mod5-solution/index.html
+++ b/mod5-solution/index.html
@@ -46,9 +46,7 @@
                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
             </li>
             <li>
-            
-            
-              <a href="#" onclick=about();>
+              <a href="#">
                 <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
             </li>
             <li>
